extends Control



func _on_1_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_1.tscn")


func _on_2_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_2.tscn")


func _on_3_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_3.tscn")


func _on_4_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_4.tscn")


func _on_5_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_5.tscn")


func _on_6_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_6.tscn")


func _on_7_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_7.tscn")


func _on_8_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_8.tscn")


func _on_9_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_9.tscn")


func _on_10_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_10.tscn")


func _on_11_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_11.tscn")


func _on_12_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_12.tscn")


func _on_boss_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/level_boss.tscn")


func _on_back_pressed():
	get_tree().change_scene_to_file("res://Scenes/menu.tscn")
